# XmVideoPlayer

./: .editorconfig  .env  .env.development  .env.production  .eslintignore  .eslintrc.cjs  .gitignore  .npmrc  .prettierignore  .prettierrc.cjs  .stylelintignore  CHANGELOG.md  CONFIG.md  LICENSE  README.md  components.d.ts  git_proxy.sh  index.html  package-lock.json  package.json  postcss.config.cjs  splashscreen.html  stylelint.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
.husky/: prepare-commit-msg
examples/: boom.html  d.rs  particle.html  stars.html
slaves/splashscreen/: App.vue  main.ts  style.css
src/: App.vue  main.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: transcode-x264.rs
src-tauri/icons/: icns.py  icon.icns
src-tauri/src/: command.rs  lib.rs  main.rs  s.rs  state.rs  utils.rs
src-tauri/src/command/: m3u8.rs  media.rs  normal.rs  payload.rs  splashscreen.rs
src-tauri/src/command/m3u8/: error.rs  merge.rs  parse.rs  request.rs
src-tauri/src/ffmpeg_c/: dl_c.rs  mod.rs
src-tauri/src/vsd/: downloader.rs  mod.rs  playlist.rs  update.rs  utils.rs
src-tauri/src/vsd/commands/: mod.rs  save.rs
src-tauri/src/vsd/dash/: mod.rs  playlist.rs
src-tauri/src/vsd/hls/: mod.rs  playlist.rs
src/api/: index.ts
src/components/: Banner.vue  Description.vue  Greet.vue  HBackHome.vue  HBanner.vue  HDescription.vue  HGreet.vue  HTest.vue  Video.vue  XmDownloadProgressBall.vue  XmFeedback.vue  m3u8.json
typings/: dplayer.d.ts  global.d.ts  svg-component-global.d.ts  svg-component.d.ts
(+57 files in other folders)
