[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1", features = [ "updater", "api-all", "system-tray"] }
percent-encoding = "2.2.0"
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.24"
m3u8-rs = "5.0.2"
cookie = "0.18.1"
aes = "0.8"
anyhow = "1"
base64 = "0.21"
cbc = "0.1"
kdam = { version = "0.4", features = ["rich"] }
regex = "1"
hex = "0.4"
requestty = "0.5.0"
dash-mpd = { version = "0.12.0", default-features = false }
vsd-mp4 = { version = "0.1.0", features = ["pssh", "text-ttml", "text-vtt"] }
mp4decrypt = "0.4.2"
threadpool = "1"
async-std = "1.12.0"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
ffmpeg-sidecar = "1.1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
